# apel

./: .gitignore  README.md  architecture_math_log.txt  pyproject.toml  training_data_sources.md
configs/: fineweb_edu_scale_1b.yaml  fineweb_edu_scale_270m.yaml  fineweb_edu_scale_pilot_65m.yaml  tinystories_iter.yaml  tinystories_selfbias_smoke.yaml  tinystories_small.yaml  tinystories_smoke.yaml  tinystories_v2_cuda_4070m.yaml  tinystories_v2_cuda_4070m_smoke.yaml  tinystories_v2_cuda_quick.yaml  tinystories_v2_quick.yaml  wikitext2_transformer_cuda_4070m_bpe2048_smoke.yaml  wikitext2_v2_cuda_4070m_bpe2048_smoke.yaml  wikitext2_v2_cuda_quick_bpe1024.yaml
paper/: apelr.tex  references.bib
src/apelr/: data.py  eval_planner.py  eval_standard.py  model.py  model_v2.py  sample.py  tokenizer.py  train.py  transformer_lm.py
tests/: test_model_v2.py  test_model_v2_alignment.py
